deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      volumes:
      - name: mysql-data
        emptyDir: {}
      containers:
      - name: mysql
        image: bitnami/mysql:5.7
        resources: {}
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-data
          mountPath: /var/lib/mysql
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: NodePort
  selector:
    app: todolist-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30099
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todolist-backend
  template:
    metadata:
      labels:
        app: todolist-backend
    spec:
      containers:
      - name: todolist-backend
        image: nguyentinh0310/todolist-backend:v1
        imagePullPolicy: "Always"
        resources: {}
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: NodePort
  selector:
    app: todolist-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30088
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todolist-frontend
  template:
    metadata:
      labels:
        app: todolist-frontend
    spec:
      volumes:
      - name: todolist-nginx-vol 
      containers:
      - name: todolist-frontend
        image: nguyentinh0310/todolist-nginx:v1
        imagePullPolicy: "Always"
        resources:
          requests:
            memory: "256Mi"
          limits:
            memory: "512Mi"       
        volumeMounts:
        - name: todolist-nginx-vol
          mountPath: "/nginx/default.conf"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
spec:
  ingressClassName: nginx
  rules:
  - host:
    http:
      paths:
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: backend
            port:
              number: 8080
      - pathType: Prefix
        path: /
        backend:
          service:
            name: frontend
            port:
              number: 80

              
# kubectl exec -it mysql-bd6888f47-98l2s -- mysql -h mysql -u todolist -p
